<resources>
    <string name="app_name">MorseLight</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="learn">Learn</string>
    <string name="flashlight">Flashlight</string>
    <string name="slow">Slow</string>
    <string name="fast">Fast</string>
    <string name="type_your_message">Type your message</string>
    <string name="signal">Signal</string>
    <string name="sos">SOS</string>
    <string name="start">Start</string>
    <string name="morse_code">Morse Code</string>
    <string name="manual">Manual</string>
    <string name="auto">Auto</string>
    <string name="about_morse_code">About Morse Code</string>
    <string name="learn_decoding">Learn Decoding</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="share">Share</string>
    <string name="off">Off</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="press_hold">Press &amp; Hold</string>
    <string name="decode">Decode</string>
    <string name="reset">Reset</string>
    <string name="incoming_message_timings">Incoming Message Timings</string>
    <string name="decoded_message">Decoded Message</string>
    <string name="camera_capture_hint">Keep incoming flashlight centered in the camera preview</string>
    <string name="camera_permission_no_granted">Permissions not granted by the user.</string>
    <string name="grant_permission">Grant permission</string>
    <string name="why_permission_required">Camera permission is required to use the auto decoding feature.</string>
    <string name="why_permission_required_flash">Camera permission is required to use the flashlight.</string>
    <string name="manual_send_hint">Tap &amp; hold the icon to transmit manually</string>
    <string name="permdesc_flashlight">Required to turn flash on</string>
    <string name="no_flash">Flash is not available on this phone</string>
    <string name="open_settings_message">Grant camera permission in app settings. This is an open source software, we really don\'t use any of your existing photos/videos.</string>
    <string name="open_settings_title">Camera permission required</string>
    <string name="on">On</string>
    <string name="stop">Stop</string>
    <string name="no_message_to_transmit">Please enter a message first.</string>
    <string name="source_code">Source code</string>
    <string name="morse_code_info_hint">Detailed information about morse code can be found here - \nhttps://en.wikipedia.org/wiki/Morse_code</string>
    <string name="no_play_store">Play Store app is not installed.</string>
    <string name="no_email_app">Email app is not installed.</string>
    <string name="no_browser_app">Browser app is not installed.</string>
    <string name="send_mail">Send mail..</string>
    <string name="layout_problem">Some problem occurred while trying to show camera preview.</string>
    <string name="perceptibility">Perceptibility (Keep low when source is far away, high when close)</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="message">Message</string>
    <string name="next">Next</string>
    <string name="sample_morse">... --- ...</string>
    <string name="decoding_hint"><![CDATA[Press & hold when mocked flashlight is on]]></string>
    <string name="finished">Finished</string>
    <string name="dot_message_or_dash_message">%1$s OR %2$s</string>
    <string name="decoded_correctly">Did it decode correctly?</string>
    <string name="yes">Yes</string>
    <string name="actual_message">What was the actual message?</string>
    <string name="no_report">No, Report</string>
    <string name="report">Report</string>
    <string name="average_luminosity">Current luminosity: %1$s</string>
    <string name="average_current_luminosity">Avg off luminosity: %1$s\nCurrent luminosity: %2$s</string>
    <string name="learning_low_luminosity">Learning low luminosity: %1$s</string>
    <string name="big">Big</string>
    <string name="small">Small</string>
    <string name="analyzed_rect_size">Size of analyzed square(Keep small when source is far away, big when close)</string>
    <string name="close">Close</string>
    <string name="sending_morse_info">Sending Morse Info</string>
    <string name="transmission_speed">Transmission Speed</string>
    <string name="currently_transmitting">Currently Transmitting</string>
    <string name="manual_decode_info">Manual decode Info</string>
    <string name="auto_decode_info">Auto decode info</string>
    <string name="app_info">App info</string>
    <string name="about_app">About the App</string>
    <string name="auto_info_perceptibility">Perceptibility means how easily it can be identified that incoming flash is on. Low values mean there is very little contrast between flash on and off states, so luminosity doesn\'t increase much. High means the luminosity difference between the on and off state will be high.</string>
    <string name="auto_info_rect_size">Only a small portion that fits between the red rectangle of the camera preview is used to analyze whether the flash is on or off. If you increase the size of the rectangle, the surroundings of the flashlight have more effect on the calculations.</string>
    <string name="auto_info_timings">Incoming timings notes for how long flash was on or off depending on how long the Press &amp; Hold button was held or released.</string>
    <string name="auto_info_reset">RESET button clears noted timings. In case you want to start again.</string>
    <string name="auto_info_decoded">This shows decoded message based on the noted timings. Use the DECODE button to decode messages.</string>
    <string name="info_signal">Signal can be useful when you want to notify someone that you\'ll be starting the transmission soon. It is a short message transmitted at a very high speed.</string>
    <string name="auto_info_start">When you start, it takes 3 seconds to analyze the average low luminosity, after 3 seconds you can start receiving the message. It may give wrong results if you start receiving messages before the average low luminosity is calculated.</string>
    <string name="info_sos">SOS button sends SOS morse code message.</string>
    <string name="info_about_app">I started this app as a fun project to learn Android development while doing something interesting. I hope it can be useful for someone who wants to learn encoding and decoding morse code. This is free to use the app without ads.\nThis is an open-source project and code is available on Github. The same code is also stored in The GitHub Arctic Code Vault for hundreds of years :D</string>
    <string name="manual_info_press_hold">Press and hold this button when you see the incoming flashlight as on and release it when it\'s off.</string>
    <string name="manual_info_decode">Use DECODE button to decode incoming morse encoded messages.</string>
    <string name="manual_info_decoded">This shows decoded message based on the noted timings. Use DECODE button to decode messages.</string>
    <string name="manual_info_reset">Reset button clears noted timings. In case you want to start again.</string>
    <string name="manual_info_timings">Incoming timings notes for how long flash was on or off depending on how long the Press &amp; Hold button was held or released.</string>
    <string name="manual_info_image">Image shows the current status of the flash. It reacts to the PRESS &amp; HOLD button.</string>
    <string name="send_info_start">Use START button to start transmitting your message. The same button can be used to stop the transmission.</string>
    <string name="send_info_input">Enter the message that you want to transmit via flashlight.</string>
    <string name="send_info_morse_code">Morse code of the currently entered message. It appears when you start transmitting the message.</string>
    <string name="send_info_current_char">Currently transmitting info shows which character is in transmission with its morse code.</string>
    <string name="send_info_image">Image shows the current status of the flash. Also, you can tap and hold to manually transmit any morse code.</string>
    <string name="send_info_transmission">Use transmission speed to control how fast the flashlight is blinked.</string>
</resources>