<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_xl">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialog_title"
        style="@style/AppbarTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/decoded_correctly"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/message_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        android:hint="@string/actual_message"
        app:layout_constraintTop_toBottomOf="@id/dialog_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 "
            android:inputType="textCapCharacters"
            android:maxLines="2" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/negative_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_l"
        android:layout_marginEnd="@dimen/margin_xl"
        android:backgroundTint="#FF9100"
        android:text="@string/no_report"
        app:layout_constraintEnd_toStartOf="@id/positive_button"
        app:layout_constraintTop_toBottomOf="@id/message_input" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/positive_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_l"
        android:text="@string/yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message_input" />

</androidx.constraintlayout.widget.ConstraintLayout>