<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/send_toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="MorseLight"
            app:titleCentered="true">

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <com.ranjan.malav.morselight_flashlightwithmorsecode.utils.AccountOptionView
        android:id="@+id/learn_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        app:icon="@drawable/ic_outline_info_24"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:title="@string/about_morse_code" />

    <com.ranjan.malav.morselight_flashlightwithmorsecode.utils.AccountOptionView
        android:id="@+id/learn_decode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xs"
        app:icon="@drawable/ic_outline_school_24"
        app:layout_constraintTop_toBottomOf="@id/learn_about"
        app:title="@string/learn_decoding" />

    <com.ranjan.malav.morselight_flashlightwithmorsecode.utils.AccountOptionView
        android:id="@+id/learn_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xs"
        app:icon="@drawable/ic_outline_star_outline_24"
        app:layout_constraintTop_toBottomOf="@id/learn_decode"
        app:title="@string/rate_this_app" />

    <com.ranjan.malav.morselight_flashlightwithmorsecode.utils.AccountOptionView
        android:id="@+id/learn_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xs"
        app:icon="@drawable/ic_outline_email_24"
        app:layout_constraintTop_toBottomOf="@id/learn_rate"
        app:title="@string/contact_developer" />

    <com.ranjan.malav.morselight_flashlightwithmorsecode.utils.AccountOptionView
        android:id="@+id/learn_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xs"
        app:icon="@drawable/ic_baseline_share_24"
        app:layout_constraintTop_toBottomOf="@id/learn_contact"
        app:title="@string/share" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/learn_donate"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="@dimen/margin_xl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/kofi" />

</androidx.constraintlayout.widget.ConstraintLayout>