<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetStart="0dp"
            app:title="@string/learn_decoding"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/morse_message_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xs"
        android:text="@string/message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/morse_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_xs"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 "
        android:hint="@string/message"
        android:inputType="textCapCharacters"
        android:maxLength="15"
        android:maxLines="1"
        app:layout_constraintEnd_toStartOf="@id/next_button"
        app:layout_constraintStart_toStartOf="@id/morse_message_title"
        app:layout_constraintTop_toBottomOf="@id/morse_message_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_xs"
        android:text="@string/next"
        app:layout_constraintEnd_toStartOf="@id/start_stop_button"
        app:layout_constraintTop_toTopOf="@id/morse_message" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/morse_message" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/morse_encoded_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_xs"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/morse_message_title"
        app:layout_constraintTop_toBottomOf="@id/start_stop_button"
        tools:text="@string/sample_morse" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/flash_status_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/flash_status_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/morse_encoded_message"
        app:srcCompat="@drawable/ic_torch"
        app:tint="?colorOnBackground" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/hint"
        style="@style/TextHeading2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_s"
        android:maxLines="10"
        android:text="@string/decoding_hint"
        app:layout_constraintBottom_toBottomOf="@id/flash_status_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/flash_status_view"
        app:layout_constraintTop_toTopOf="@id/flash_status_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/start_timer"
        style="@style/TextLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_s"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/flash_status_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/flash_status_view"
        tools:text="3 2 1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/flash_status_text"
        style="@style/TextBody2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_s"
        android:text="@string/off"
        app:layout_constraintBottom_toTopOf="@id/reset_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/reset_title"
        style="@style/TextSubHeading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xs"
        android:layout_marginBottom="@dimen/margin_s"
        android:text="@string/incoming_message_timings"
        app:layout_constraintBottom_toTopOf="@id/incoming_message"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/incoming_message"
        style="@style/TextSubHeading1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xs"
        android:layout_marginTop="@dimen/margin_m"
        android:layout_marginEnd="@dimen/margin_xs"
        android:layout_marginBottom="@dimen/margin_xs"
        android:background="@drawable/border_gray_4dp"
        android:ellipsize="marquee"
        android:gravity="bottom"
        android:maxLines="3"
        android:minLines="3"
        android:padding="@dimen/padding_xs"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/decode_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="0.5s    3s     0.78s     2.4s 0.5s    3s     0.78s     2.4s 0.5s    3s     0.78s     2.4s 0.5s    3s     0.78s     2.4s 0.5s    3s     0.78s     2.4s 0.5s    3s     0.78s     2.4s 0.5s    3s     0.78s     2.4s 0.5s    3s     0.78s     2.4s" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/decode_title"
        style="@style/TextSubHeading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xs"
        android:layout_marginBottom="@dimen/margin_s"
        android:text="@string/decoded_message"
        app:layout_constraintBottom_toTopOf="@id/decoded_message"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/decode_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_xs"
        android:text="@string/decode"
        app:layout_constraintBottom_toTopOf="@id/decoded_message"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/decoded_message"
        style="@style/TextSubHeading1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xs"
        android:layout_marginTop="@dimen/margin_m"
        android:layout_marginEnd="@dimen/margin_xs"
        android:layout_marginBottom="@dimen/margin_s"
        android:background="@drawable/border_gray_4dp"
        android:ellipsize="marquee"
        android:maxLines="2"
        android:minLines="2"
        android:padding="@dimen/padding_xs"
        app:layout_constraintBottom_toTopOf="@id/tap_and_hold_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Hello World!" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tap_and_hold_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="@dimen/margin_xs"
        android:backgroundTint="@color/colorAccent"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/press_hold"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>