<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/flash_status_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/flash_status_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_torch"
        app:tint="?colorOnBackground" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/flash_status_text"
        style="@style/TextBody2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_s"
        android:text="@string/off"
        app:layout_constraintBottom_toTopOf="@id/reset_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/reset_title"
        style="@style/TextSubHeading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xs"
        android:layout_marginBottom="@dimen/margin_s"
        android:text="@string/incoming_message_timings"
        app:layout_constraintBottom_toTopOf="@id/incoming_message"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_xs"
        android:text="@string/reset"
        app:layout_constraintBottom_toTopOf="@id/incoming_message"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/incoming_message"
        style="@style/TextSubHeading1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xs"
        android:layout_marginTop="@dimen/margin_m"
        android:layout_marginEnd="@dimen/margin_xs"
        android:layout_marginBottom="@dimen/margin_xs"
        android:background="@drawable/border_gray_4dp"
        android:ellipsize="marquee"
        android:gravity="bottom"
        android:maxLines="3"
        android:minLines="3"
        android:padding="@dimen/padding_xs"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/decode_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="0.5s    3s     0.78s     2.4s 0.5s    3s     0.78s     2.4s 0.5s    3s     0.78s     2.4s 0.5s    3s     0.78s     2.4s 0.5s    3s     0.78s     2.4s 0.5s    3s     0.78s     2.4s 0.5s    3s     0.78s     2.4s 0.5s    3s     0.78s     2.4s" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/decode_title"
        style="@style/TextSubHeading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xs"
        android:layout_marginBottom="@dimen/margin_s"
        android:text="@string/decoded_message"
        app:layout_constraintBottom_toTopOf="@id/decoded_message"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/decode_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_xs"
        android:text="@string/decode"
        app:layout_constraintBottom_toTopOf="@id/decoded_message"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/report_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_xs"
        android:text="@string/report"
        android:textColor="#FFAB40"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/decoded_message"
        app:layout_constraintEnd_toStartOf="@id/decode_button"
        app:strokeColor="@color/amber" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/decoded_message"
        style="@style/TextSubHeading1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xs"
        android:layout_marginTop="@dimen/margin_m"
        android:layout_marginEnd="@dimen/margin_xs"
        android:layout_marginBottom="@dimen/margin_s"
        android:background="@drawable/border_gray_4dp"
        android:ellipsize="marquee"
        android:maxLines="3"
        android:minLines="3"
        android:padding="@dimen/padding_xs"
        app:layout_constraintBottom_toTopOf="@id/buttons_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Hello World!" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xs"
        android:layout_marginEnd="@dimen/margin_xs"
        android:layout_marginBottom="@dimen/margin_xs"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signal"
            app:backgroundTint="#FFAB40"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tap_and_hold_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/colorAccent"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:text="@string/press_hold"
            app:cornerRadius="50dp"
            app:layout_constraintEnd_toStartOf="@id/sos_button"
            app:layout_constraintStart_toEndOf="@id/signal_button"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sos_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#D32F2F"
            android:text="@string/sos"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>